# lemmanaid

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
app/: README.md  app.py
configs/: fsdp.yaml  multi_gpu_llama.yaml  multi_gpu_yousef.yaml
lemma_exploration/: __init__.py  args.py  comparison.py  config.py  dataset.py  decorators.py  eval.py  eval_predictions.py  extend_dataset.py  extract.py  finetune.py  model.py  parallel_finetune.py  parallel_predictions.py  parallel_predictions_model_generate.py  parse.py  rediscovery.py  reload_recursive.py  serial_predictions.py  union_dataset.py  utils.py
lemma_exploration/tests/: test_isabelle_connector.py
scripts/: clean_processes.sh  clean_tmp_files.sh  finetune_and_evaluate.sh  generate_predictions.py  multi_gpu.yaml  setup.sh  train_task1.sh
tests/: test_extract.py
thys/: .gitignore  AbstractLemma.ML  Extract.ML  ExtractLemmas.ML  ExtractLemmas.thy  Flask_Test.thy  GetTemplates.ML  RoughSpec.ML  RoughSpec.thy  RoughSpecExamples.thy  RoughSpecTesting.thy  RoughSpecUtils.ML  TODO.txt  Utils.ML
thys/test_cases_minimal/: mintemplateLemmas.txt
